# Face_Recognition_PCA

./: .gitignore  CMakeLists.txt  README.md
CV_Task_5/: CMakeLists.txt  README.md
CV_Task_5/src/: main.cpp
CV_Task_5/src/core/: MathEngine.cpp  MathEngine.h
CV_Task_5/src/pipeline/: FaceDetector.cpp  FaceDetector.h  FaceRecognizer.cpp  FaceRecognizer.h  PCAPipeline.cpp  PCAPipeline.h
CV_Task_5/src/ui/: DetectionWorker.cpp  DetectionWorker.h  MainWindow.cpp  MainWindow.h  ROCWidget.cpp  ROCWidget.h
src/: main.cpp
src/pipeline/: PCA_Pipeline.cpp  PCA_Pipeline.h
